--- a/huiswerkles9.html
+++ b/huiswerkles9.html
@@ -62,7 +62,7 @@
               <section class="klas1 klas2">
               <header><h2>Welkom Julianadorp</h2></header>
           <article>
-              <img src="afbeeldingmap/welkom.jpeg" alt="Julianadorp"
+              <img src="welkom.jpeg" alt="Julianadorp"
                 title="foto"
                 width="250" height="200">
 
@@ -79,7 +79,7 @@
                   <header><h2>De Nieuwbouw Willem Alexanderhof</h2></header>
           <article>
                 <img
-                src="afbeeldingmap/nieuwbouwalexanderhof.jpeg" alt= "Nieuwbouw"
+                src="nieuwbouwalexanderhof.jpeg" alt= "Nieuwbouw"
                 title="foto"
                 width="250" height="200">
 
@@ -96,7 +96,7 @@
 
           <article>
 
-              <img src="afbeeldingmap/jvc.jpg" alt="voetbal"
+              <img src="jvc.jpg" alt="voetbal"
               title="foto"
               width="250" height="200">
 
@@ -113,7 +113,7 @@
             <article>
                 <header><h2>Strand, Zee en Duinen</h2></header>
                 <img
-                src="afbeeldingmap/StrandJulianadorp.jpg" alt= "Dekustlijn"
+                src="StrandJulianadorp.jpg" alt= "Dekustlijn"
                 title="foto"
                 width="300" height="300">
 
@@ -132,7 +132,7 @@
 
 <br>
 
-              <img src="afbeeldingmap/KaartNoordHolland.jpg" alt="NoordHolland" title="foto"
+              <img src="KaartNoordHolland.jpg" alt="NoordHolland" title="foto"
               width="300" height="300">
 
 
