--- a/huiswerkles9.html
+++ b/huiswerkles9.html
@@ -100,7 +100,7 @@
               title="foto"
               width="250" height="200">
 
-              <a href="afbeeldingmap/contributie2020.pdf">Contributie vereniging Download pdf</a><br>
+              <a href="contributie2020.pdf">Contributie vereniging Download pdf</a><br>
               <h2>Sport, spel en ontspanning voor jong en oud.Sport, spel en ontspanning voor jong en oud.</h2>
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/HvQ1WrN6AP4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
