--- a/huiswerkles9.html
+++ b/huiswerkles9.html
@@ -53,7 +53,7 @@
             <a href="https://www.holland.com/be_nl/toerisme/bestemmingen/provincies/noord-holland/julianadorp-6.htm">Over Julianadorp</a>
             <a href="https://www.holland.com/be_nl/toerisme/bestemmingen/regios/bloemenvelden.htm">Aanbod</a>
             <a href="https://www.julianadorp-parelvandekop.com/verenigingen/verenigen.htm">Sportverenigingen</a>
-            <a href="https://www.thefork.nl/restaurants/julianadorp-c683078">RestaurantsRestaurants</a>
+            <a href="https://www.thefork.nl/restaurants/julianadorp-c683078">Restaurants</a>
             <a href="https://www.vakantieburojulianadorp.nl/contact/">Contact</a>
           </nav>
 </header>
