--- a/huiswerkles9.html
+++ b/huiswerkles9.html
@@ -17,6 +17,16 @@
         src="zee.jpeg" alt="logo" title="foto"
         width="200" height="100">
 
+        <nav>
+          <a href="https://www.jvc-julianadorp.nl/"width"700" height"1400">Over ons</a>
+          <a href="https://nha.nl">Aanbod</a>
+          <a href="jvc.pdf">Nieuws</a>
+          <a href="jvc index.html">Contact</a>
+        </nav>
+      </header>
+
+
+
 
           <h1>Naamgeving Julianadorp in 1909
 <br>
