--- a/huiswerkles9.html
+++ b/huiswerkles9.html
@@ -19,12 +19,11 @@
 
         <nav>
           <a href="https://www.jvc-julianadorp.nl/"width"700" height"1400">Over ons</a>
-          <a href="https://nha.nl">Aanbod</a>
+          <a href="https://nha.nl">Reclame</a>
           <a href="jvc.pdf">Nieuws</a>
           <a href="jvc index.html">Contact</a>
         </nav>
       </header>
-
 
 
 
