--- a/jvc index.html
+++ b/jvc index.html
@@ -26,7 +26,7 @@
 
 <fieldset>
 <legend>Inschrijvingsinformatie</legend><br>
-<b> Selecteer een cursus</b><br>
+<b> Selecteer </b><br>
 <input type="checkbox" name="onderwerpen" value="ja">Voetballen
 <input type="checkbox" name="onderwerpen" value="ja">Zaalvoetbal
 <input type="checkbox" name="onderwerpen" value="ja">Handbal
