--- a/huiswerkles9.html
+++ b/huiswerkles9.html
@@ -19,7 +19,7 @@
 
         <nav>
           <a href="https://www.jvc-julianadorp.nl/"width"700" height"1400">Over ons</a>
-          <a href="https://nha.nl">Reclame</a>
+          <a href="nha.html">Reclame</a>
           <a href="jvc.pdf">Nieuws</a>
           <a href="pdf les 9.6.html">PDF Pagina</a>
           <a href="jvc index.html">Contact</a>
