--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -14,7 +14,7 @@
 
 
 
-<img src="afbeelding/zee.jpeg" alt="logo" title="foto"
+<img src="zee.jpeg" alt="logo" title="foto"
         width="200" height="100">
 
         <h1>Het dorpshuis Julianadorp
