--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -44,8 +44,8 @@
         src="https://file-examples-com.github.io/uploads/2017/11/file_example_WAV_1MG.wav"></audio>
 
 <br>
-        <a href="html/info.pdf">download pdf</a><br><hr>
-        <iframe src="html/info.pdf" with="360" height="500"></iframe>
+        <a href="biljarten.pdf">download pdf</a><br><hr>
+        <iframe src="biljarten.pdf" with="360" height="500"></iframe>
 
 
 <br>
@@ -64,8 +64,8 @@
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
 <br>
-        <a href="html/breien.pdf">download pdf</a><br><hr>
-        <iframe src="html/breien.pdf" with="360" height="500"></iframe>
+        <a href="breien.pdf">download pdf</a><br><hr>
+        <iframe src="breien.pdf" with="360" height="500"></iframe>
       </div>
 
 <br>
@@ -77,8 +77,8 @@
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
 <br>
-          <a href="html/klaverjassen.pdf">download pdf</a><br><hr>
-          <iframe src="html/klaverjassen.pdf" with="360" height="500"></iframe>
+          <a href="klaverjassen.pdf">download pdf</a><br><hr>
+          <iframe src="klaverjassen.pdf" with="360" height="500"></iframe>
 <br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/8jry8Zt5X94" title="YouTube video player"
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
