--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -37,7 +37,7 @@
 
 <div>
         <img
-        src="afbeelding/Biljartclub-Dorpshuis-2020.png"
+        src="Biljartclub-Dorpshuis-2020.png"
         alt="Biljarten" widht="300" height="300">
 
         <audio controls
@@ -59,7 +59,7 @@
     <div>
 
         <img
-        src="afbeelding/Dorpshuis-Breiclub-2020.png" alt="breien" widht="300" height="300">
+        src="Dorpshuis-Breiclub-2020.png" alt="breien" widht="300" height="300">
 
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
@@ -72,10 +72,10 @@
 <br>
   <div>
         <img
-        src="afbeelding/Klaverjassesn-2020.png" alt="klaverjassen" widht="300" height="300">
+        src="Klaverjassesn-2020.png" alt="klaverjassen" widht="300" height="300">
 
         <audio controls
-        src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
+        src="http://home.kabelfoon.nl/~paulanky/fun/bboop.wav"></audio>
 <br>
           <a href="klaverjassen.pdf">download pdf</a><br><hr>
           <iframe src="klaverjassen.pdf" with="360" height="500"></iframe>
@@ -86,10 +86,10 @@
         </div>
 <br>
 <br>
-                      <img src="afbeelding/KaartNoordHolland.jpg" alt="NoordHolland" title="foto"
+                      <img src="KaartNoordHolland.jpg" alt="NoordHolland" title="foto"
                       width="300" height="300">
 
-                      <img src="afbeelding/plattegrond.jpg"
+                      <img src="plattegrond.jpg"
                       alt="plattegrond"  title="foto" with="200" height="200">
 
 
