--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -37,7 +37,7 @@
 
 <div>
         <img
-        src="Biljartclub-Dorpshuis-2020.png"
+        src="BiljartclubDorpshuis2020.png"
         alt="Biljarten" widht="300" height="300">
 
         <audio controls
@@ -59,7 +59,7 @@
     <div>
 
         <img
-        src="Dorpshuis-Breiclub-2020.png" alt="breien" widht="300" height="300">
+        src="DorpshuisBreiclub2020.png" alt="breien" widht="300" height="300">
 
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
@@ -70,9 +70,11 @@
 
 <br>
 <br>
+
   <div>
+
         <img
-        src="Klaverjassesn-2020.png" alt="klaverjassen" widht="300" height="300">
+        src="Klaverjassen2020.png" alt="klaverjassen" widht="300" height="300">
 
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/bboop.wav"></audio>
