--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -38,7 +38,7 @@
 <div>
         <img
         src="BiljartclubDorpshuis2020.png"
-        alt="Biljarten" widht="300" height="300">
+        alt="Biljarten">
 
         <audio controls
         src="https://file-examples-com.github.io/uploads/2017/11/file_example_WAV_1MG.wav"></audio>
@@ -59,7 +59,7 @@
     <div>
 
         <img
-        src="DorpshuisBreiclub2020.png" alt="breien" widht="300" height="300">
+        src="DorpshuisBreiclub2020.png" alt="breien">
 
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
@@ -74,7 +74,7 @@
   <div>
 
         <img
-        src="Klaverjassen2020.png" alt="klaverjassen" widht="300" height="300">
+        src="Klaverjassen2020.png" alt="klaverjassen">
 
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/bboop.wav"></audio>
@@ -92,7 +92,7 @@
                       width="300" height="300">
 
                       <img src="plattegrond.jpg"
-                      alt="plattegrond"  title="foto" with="200" height="200">
+                      alt="plattegrond">
 
 
                        <footer><p>Bereikbaar via uw GPS en de ANWB borden</p></footer>
