--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -40,6 +40,7 @@
         src="BiljartclubDorpshuis2020.png"
         alt="Biljarten">
 
+        <h1>HTML5 geluid</h1>
         <audio controls
         src="https://file-examples-com.github.io/uploads/2017/11/file_example_WAV_1MG.wav"></audio>
 
@@ -61,6 +62,7 @@
         <img
         src="DorpshuisBreiclub2020.png" alt="breien">
 
+        <h1>HTML5 geluid</h1>
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
 <br>
@@ -77,6 +79,7 @@
         <img
         src="Klaverjassen2020.png" alt="klaverjassen">
 
+        <h1>HTML5 geluid</h1>
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/bboop.wav"></audio>
 <br>
