--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -38,58 +38,49 @@
 <div>
         <img
         src="BiljartclubDorpshuis2020.png"
-        alt="Biljarten">
+        alt="Biljarten"   width="300" height="300">
 
-        
+        <img
+        src="DorpshuisBreiclub2020.png" alt="breien"  width="300" height="300">
+
+        <img
+        src="Klaverjassen2020.png" alt="klaverjassen" width="300" height="300">
+</div>
+
+<br>
+    <div>
+        <a href="biljarten.pdf">download pdf</a>
+        <iframe src="activiteit biljarten.pdf" with="300" height="500"></iframe>
         <audio controls
         src="https://file-examples-com.github.io/uploads/2017/11/file_example_WAV_1MG.wav"></audio>
+      </div>
+
+    <div>
+        <a href="breien.pdf">download pdf</a>
+        <iframe src="activiteit breien.pdf" with="300" height="500"></iframe>
+        <audio controls
+        src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
+      </div>
+
+    <div>
+        <a href="klaverjassen.pdf">download pdf</a>
+        <iframe src="activiteit klaverjassen.pdf" with="300" height="500"></iframe>
+        <audio controls
+        src="http://home.kabelfoon.nl/~paulanky/fun/ohw.WAV"></audio>
+
+      </div>
 
 <br>
-        <a href="biljarten.pdf">download pdf</a><br><hr>
-        <iframe src="biljarten.pdf" with="360" height="500"></iframe>
 
-
-<br>
+    <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/27Vq6pnQHg8" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
-      </div>
 
-<br>
-<br>
-    <div>
-
-        <img
-        src="DorpshuisBreiclub2020.png" alt="breien">
-
-
-        <audio controls
-        src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
-<br>
-        <a href="breien.pdf">download pdf</a><br><hr>
-        <iframe src="breien.pdf" with="360" height="500"></iframe>
-
-      </div>
-
-<br>
-<br>
-
-  <div>
-
-        <img
-        src="Klaverjassen2020.png" alt="klaverjassen">
-
-
-        <audio controls
-        src="http://home.kabelfoon.nl/~paulanky/fun/bboop.wav"></audio>
-<br>
-          <a href="klaverjassen.pdf">download pdf</a><br><hr>
-          <iframe src="klaverjassen.pdf" with="360" height="500"></iframe>
-<br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/8jry8Zt5X94" title="YouTube video player"
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
-        </div>
+      </div>
 <br>
 <br>
                       <img src="KaartNoordHolland.jpg" alt="NoordHolland" title="foto"
