--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -49,7 +49,7 @@
 
 <br>
     <div>
-        <a href="activiteit biljarten.pdf">download pdf</a>
+        <a href="activiteit biljarten.pdf">download pdf</a><br><hr>
         <iframe src="activiteit biljarten.pdf" with="300" height="500"></iframe>
 
 
@@ -61,7 +61,7 @@
 
 
     <div>
-        <a href="activiteit breien.pdf">download pdf</a>
+        <a href="activiteit breien.pdf">download pdf</a><br><hr>
         <iframe src="activiteit breien.pdf" with="300" height="500"></iframe>
 </div>
 
@@ -70,7 +70,7 @@
 
 
     <div>
-        <a href="activiteit klaverjassen.pdf">download pdf</a>
+        <a href="activiteit klaverjassen.pdf">download pdf</a><br><hr>
         <iframe src="activiteit klaverjassen.pdf" with="300" height="500"></iframe>
       </div>
 
