--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -27,56 +27,91 @@
   de landelijke Burendag, de buren van het dorpshuis uitgenodigd voor de koffie en om tegelijkertijd
   hernieuwd kennis te maken met het prachtige Dorphuis van Julianadorp.
   September is ook destartmaand van het nieuwe winterseizoen voor de activiteiten binnen het dorphuis en ook
-  voor meerdere verenigingen is het een nieuwe start na de zomervakantie.</h1>
+  voor meerdere verenigingen is het een nieuwe start na de zomervakantie.<br>
+<br>
+          <a href="https://dorpshuisjulianadorp.nl">dorpshuisjulianadorp</a></h1>
+
 
 </header>
 
-        <iframe src="https://www.dorpshuisjulianadorp.nl/" width="400" height="600"></iframe>
+
 <br>
-<br>
-
-<div>
-        <img
-        src="BiljartclubDorpshuis2020.png"
-        alt="Biljarten"   width="300" height="300">
-
-        <img
-        src="DorpshuisBreiclub2020.png" alt="breien"  width="300" height="300">
-
-        <img
-        src="Klaverjassen2020.png" alt="klaverjassen" width="300" height="300">
-</div>
-
 <br>
     <div>
-        <a href="activiteit biljarten.pdf">download pdf</a><br><hr>
-        <iframe src="activiteit biljarten.pdf" with="300" height="500"></iframe>
+        <img src="afbeelding/biljart.jpg">
+
+  <p>INFORMATIE
+
+                 Activiteit Biljarten.
 
 
+Beste biljarters,
 
-</div>
+Wij zijn blij om u weer te faciliteren, voorlopig op de
+maandag en dinsdagmiddag bij onze vaste biljartgroep.
+
+U kunt ook op de maandag, dinsdag, woensdag en vrijdag komen
+biljarten van 10.00 tot 12.00 uur.
+
+Helaas alleen op afspraak.
+
+Zodat wij ons allen aan het Coronaprotocol kunnen houden.
+
+Dank voor uw medewerking
+
+</p>
+
 
         <audio controls
         src="https://file-examples-com.github.io/uploads/2017/11/file_example_WAV_1MG.wav"></audio>
+</div>
 
+<br>
 
     <div>
-        <a href="activiteit breien.pdf">download pdf</a><br><hr>
-        <iframe src="activiteit breien.pdf" with="300" height="500"></iframe>
-</div>
+        <img src="afbeelding/breien.jpg">
+
+<P>INFORMATIE
+
+                 Activiteit Breien.
+
+
+Damens die gezellig willen breien kunnen op elke maandagmorgen van 9.00 tot 11.00 uur
+
+terecht in het dorpshuis. De zaal is open om 8.45 uur en de koffie staat klaar.
+
+De kosten hiervoor is € 5,00 per maand.
+ </p>
+
+<br>
 
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/alleluia.wav"></audio>
+</div>
 
 
     <div>
-        <a href="activiteit klaverjassen.pdf">download pdf</a><br><hr>
-        <iframe src="activiteit klaverjassen.pdf" with="300" height="500"></iframe>
-      </div>
+      <img src="afbeelding/klaverjassen.jpg">
 
+<p>INFORMATIE
+
+                      Activiteit Klaverjassen.
+
+
+Wilt u een avondje uit, dan kunt u op iedere dinsdag van 20.00 tot 23.30 uur terecht in
+
+het dorpshuis voor een gezellig spelletje klaverjassen.
+
+De zaal is open om 19.30 uur.
+
+De kosten zijn € 2,50 p/p.  De koffie staat klaar.
+
+(drankjes zijn hier niet bij inbegrepen)
+ </p>
+<br>
         <audio controls
         src="http://home.kabelfoon.nl/~paulanky/fun/ohw.WAV"></audio>
-
+</div>
 
 <br>
 
