--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -38,7 +38,8 @@
 <br>
 <br>
     <div>
-        <img src="afbeelding/biljart.jpg">
+        <img src="afbeelding/biljart.jpg" title="foto"
+                width="200" height="150">
 
   <p>INFORMATIE
 
@@ -69,7 +70,8 @@ Dank voor uw medewerking
 <br>
 
     <div>
-        <img src="afbeelding/breien.jpg">
+        <img src="afbeelding/breien.jpg" title="foto"
+                width="200" height="150">
 
 <P>INFORMATIE
 
@@ -91,7 +93,8 @@ De kosten hiervoor is € 5,00 per maand.
 
 
     <div>
-      <img src="afbeelding/klaverjassen.jpg">
+      <img src="afbeelding/klaverjassen.jpg" title="foto"
+              width="200" height="150">
 
 <p>INFORMATIE
 
