--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -27,24 +27,22 @@
   de landelijke Burendag, de buren van het dorpshuis uitgenodigd voor de koffie en om tegelijkertijd
   hernieuwd kennis te maken met het prachtige Dorphuis van Julianadorp.
   September is ook destartmaand van het nieuwe winterseizoen voor de activiteiten binnen het dorphuis en ook
-  voor meerdere verenigingen is het een nieuwe start na de zomervakantie.<br>
+  voor meerdere verenigingen is het een nieuwe start na de zomervakantie.<br></h1>
 <br>
-          <a href="https://dorpshuisjulianadorp.nl">dorpshuisjulianadorp</a></h1>
-
-
+          <a href="https://dorpshuisjulianadorp.nl">dorpshuisjulianadorp</a>
+          <iframe src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fdorpshuisjulianadorp.nl%2Factiviteiten%2F&psig=AOvVaw34IK5YNCBGKWRsf_SR94No&ust=1644951797824000&source=images&cd=vfe&ved=2ahUKEwiFt_aN8f_1AhW10bsIHYhkCSwQr4kDegQIARBg" width="200" height="200"></iframe><p>selecteer activiteiten</p><hr>
 </header>
 
 
 <br>
 <br>
     <div>
-        <img src="afbeelding/biljart.jpg" title="foto"
+        <img src="BiljartclubDorpshuis2020.png" alt="aktiviteit"   title="foto"
                 width="200" height="150">
 
   <p>INFORMATIE
 
                  Activiteit Biljarten.
-
 
 Beste biljarters,
 
@@ -70,7 +68,8 @@ Dank voor uw medewerking
 <br>
 
     <div>
-        <img src="afbeelding/breien.jpg" title="foto"
+
+        <img src="DorpshuisBreiclub2020.png" alt="aktiviteit" title="foto"
                 width="200" height="150">
 
 <P>INFORMATIE
@@ -93,7 +92,7 @@ De kosten hiervoor is € 5,00 per maand.
 
 
     <div>
-      <img src="afbeelding/klaverjassen.jpg" title="foto"
+      <img src="Klaverjassen2020.png" alt="aktiviteit" title="foto"
               width="200" height="150">
 
 <p>INFORMATIE
@@ -113,17 +112,17 @@ De kosten zijn € 2,50 p/p.  De koffie staat klaar.
  </p>
 <br>
         <audio controls
-        src="http://home.kabelfoon.nl/~paulanky/fun/ohw.WAV"></audio>
+        src="http://home.kabelfoon.nl/~paulanky/fun/ohw.WAV"></audio><hr>
 </div>
 
 <br>
 
     <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/27Vq6pnQHg8" title="YouTube video player"
+        <iframe width="300" height="120" src="https://www.youtube.com/embed/27Vq6pnQHg8" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
 
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/8jry8Zt5X94" title="YouTube video player"
+          <iframe width="300" height="120" src="https://www.youtube.com/embed/8jry8Zt5X94" title="YouTube video player"
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
