--- a/huiswerkles9a.html
+++ b/huiswerkles9a.html
@@ -42,15 +42,15 @@
 
   <p>INFORMATIE
 
-                 Activiteit Biljarten.
+                 Activiteit Biljarten.<br>
 
-Beste biljarters,
+Beste biljarters,<br>
 
 Wij zijn blij om u weer te faciliteren, voorlopig op de
 maandag en dinsdagmiddag bij onze vaste biljartgroep.
 
 U kunt ook op de maandag, dinsdag, woensdag en vrijdag komen
-biljarten van 10.00 tot 12.00 uur.
+biljarten van 10.00 tot 12.00 uur.<br>
 
 Helaas alleen op afspraak.
 
@@ -74,12 +74,12 @@ Dank voor uw medewerking
 
 <P>INFORMATIE
 
-                 Activiteit Breien.
+                 Activiteit Breien.<br>
 
 
 Damens die gezellig willen breien kunnen op elke maandagmorgen van 9.00 tot 11.00 uur
 
-terecht in het dorpshuis. De zaal is open om 8.45 uur en de koffie staat klaar.
+terecht in het dorpshuis. <br>De zaal is open om 8.45 uur en de koffie staat klaar.
 
 De kosten hiervoor is € 5,00 per maand.
  </p>
@@ -97,12 +97,12 @@ De kosten hiervoor is € 5,00 per maand.
 
 <p>INFORMATIE
 
-                      Activiteit Klaverjassen.
+                      Activiteit Klaverjassen.<br>
 
 
 Wilt u een avondje uit, dan kunt u op iedere dinsdag van 20.00 tot 23.30 uur terecht in
 
-het dorpshuis voor een gezellig spelletje klaverjassen.
+het dorpshuis voor een gezellig spelletje klaverjassen.<br>
 
 De zaal is open om 19.30 uur.
 
